[gd_scene load_steps=4 format=3 uid="uid://cc2osn0oeeob1"]

[ext_resource type="Script" uid="uid://prgx1m2ubdav" path="res://scripts/scenemanager.gd" id="1_xerks"]
[ext_resource type="PackedScene" uid="uid://derc0km2mknmv" path="res://scenes/menus/pause_menu.tscn" id="2_7rx03"]
[ext_resource type="Theme" uid="uid://cj661i3baqy8q" path="res://themes/level_button.tres" id="2_ppdub"]

[node name="Scenemanager" type="Node"]
process_mode = 1
script = ExtResource("1_xerks")

[node name="MenuScene" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenu" parent="MenuScene" instance=ExtResource("2_7rx03")]
visible = false

[node name="LevelScene" type="Node2D" parent="." groups=["scenesNodes"]]
visible = false

[node name="2dScene" type="Node2D" parent="." groups=["scenesNodes"]]
visible = false

[node name="controlScene" type="Control" parent="." groups=["scenesNodes"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HSeparator" type="HSeparator" parent="Overlay/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="LabelsContainer" type="VBoxContainer" parent="Overlay/HBoxContainer"]
layout_mode = 2

[node name="NbCloneLabel" type="Label" parent="Overlay/HBoxContainer/LabelsContainer"]
layout_mode = 2
theme = ExtResource("2_ppdub")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Clone available: 1"

[node name="Times" type="Label" parent="Overlay/HBoxContainer/LabelsContainer"]
layout_mode = 2
theme = ExtResource("2_ppdub")
theme_override_constants/line_spacing = -12
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "00:00.000
00:00.000"
